DynamicTable and DynamicSidebar done

--- a/src/components/DynamicSidebar/DynamicSidebar.module.scss
+++ b/src/components/DynamicSidebar/DynamicSidebar.module.scss
@@ -202,3 +202,10 @@ body {
   color: #fff;
   border-color: $primary-color;
 }
+
+.saveButtonDisabled {
+  background-color: $disabled-bg;
+  color: $disabled-text;
+  border-color: $border-color;
+  cursor: not-allowed;
+}
